--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "my-next-13",
   "version": "0.1.0",
   "private": true,
+  
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "export": "next export",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
